--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "description": "",
   "type": "module",
   "dependencies": {
+    "@ai-sdk/google": "^1.2.10",
     "@ai-sdk/openai": "^1.3.10",
     "@mastra/core": "^0.8.2",
+    "firebase": "10.13.1",
+    "firebase-admin": "13.0.2",
     "mastra": "^0.4.8",
     "zod": "^3.24.2"
   },
