--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "type": "module",
   "dependencies": {
     "@ai-sdk/google": "^1.2.10",
+    "@ai-sdk/google-vertex": "^2.2.15",
     "@ai-sdk/openai": "^1.3.10",
+    "@google/genai": "^0.8.0",
     "@mastra/core": "^0.8.2",
     "firebase": "10.13.1",
     "firebase-admin": "13.0.2",
