--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@ai-sdk/openai": "^1.3.10",
     "@google/genai": "^0.8.0",
     "@mastra/core": "^0.8.2",
+    "dotenv": "^17.3.1",
     "firebase": "10.13.1",
     "firebase-admin": "13.0.2",
     "mastra": "^0.4.8",
